--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -1,15 +1,15 @@
-http {
-  upstream myproject {
-    server 127.0.0.1:8000 weight=3;
-    server 127.0.0.1:8001;
-    server 127.0.0.1:8002;
-    server 127.0.0.1:8003;
-  }
 
-  server {
+upstream servers {
+    server m1;
+    server m2;
+    server m3;
+    server m4;
+    server m5;
+}
+
+server {
     listen 80;
     location / {
-      proxy_pass http://myproject;
+        proxy_pass http://servers;
     }
-  }
 }
