--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -1,5 +1,6 @@
 
 upstream servers {
+    #ip_hash;
     server m1;
     server m2;
     server m3;
@@ -7,9 +8,35 @@ upstream servers {
     server m5;
 }
 
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
     listen 80;
+    server_name api.kmn.tw;
     location / {
+
+	    proxy_set_header Host $host;
+	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass http://servers;
+        
+        # enable WebSockets
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
+
+server {
+    listen 80;
+    server_name ws.kmn.tw;
+    location / {
+        root /var/www/html/ws_test;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
+}
+
+
