--- a/runner/package.json
+++ b/runner/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "basic-request": "^3.0.4"
+    "basic-request": "^3.0.4",
+    "socket.io-client": "^2.3.0",
+    "socket.io-redis": "^5.2.0"
   }
 }
