--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "sleep": "^6.1.0"
+    "socket.io": "^2.3.0",
+    "socket.io-redis": "^5.2.0"
   }
 }
