--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
 
   redis:
     image: redis:alpine
+    command: redis-server --requirepass !!socket.io++
     expose:
       - 6379
   m1:
@@ -14,6 +15,7 @@ services:
       name: 'machine_1'
       connect_redis: 'redis'
       redis_port: 6379
+      redis_pwd: '!!socket.io++'
     links:
       - redis
   m2:
@@ -24,6 +26,7 @@ services:
       name: 'machine_2'
       connect_redis: 'redis'
       redis_port: 6379
+      redis_pwd: '!!socket.io++'
     links:
       - redis
   m3:
@@ -34,6 +37,7 @@ services:
       name: 'machine_3'
       connect_redis: 'redis'
       redis_port: 6379
+      redis_pwd: '!!socket.io++'
     links:
       - redis
   m4:
@@ -44,6 +48,7 @@ services:
       name: 'machine_4'
       connect_redis: 'redis'
       redis_port: 6379
+      redis_pwd: '!!socket.io++'
     links:
       - redis
   m5:
@@ -54,6 +59,7 @@ services:
       name: 'machine_5'
       connect_redis: 'redis'
       redis_port: 6379
+      redis_pwd: '!!socket.io++'
     links:
       - redis
 
